--- a/styles/module.scss
+++ b/styles/module.scss
@@ -1,12 +1,15 @@
 @import '../scss/globals';
-@import '../scss/actionHud';
 @import '../scss/combatHud';
 @import '../scss/dialogTheme';
-@import '../scss/drawer';
 @import '../scss/misc';
-@import '../scss/movement';
-@import '../scss/portrait';
 @import '../scss/theme';
 @import '../scss/themeOptions';
 @import '../scss/tooltip';
-@import '../scss/weaponSets';
+
+.extended-combat-hud{
+    @import '../scss/actionHud';
+    @import '../scss/drawer';
+    @import '../scss/movement';
+    @import '../scss/portrait';
+    @import '../scss/weaponSets';
+}
