--- a/scss/_movement.scss
+++ b/scss/_movement.scss
@@ -16,6 +16,10 @@
 
     pointer-events: all;
 
+    &.hidden{
+        display: none;
+    }
+
     .movement-current,
     i.fas {
         font-size: 1.8rem;
@@ -41,6 +45,35 @@
         transition: all 0.3s ease-in-out;
         max-width: 25px;
         width: 100%;
+    }
+
+    &:has(.button-hud-button){
+        padding: 0;
+        justify-content: unset;
+    }
+
+    .button-hud-button{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex: 1;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        font-size: medium;
+        text-transform: uppercase;
+        gap: 1rem;
+
+        &.button-hud-button-small{
+            font-size: small;
+            i{
+                font-size: medium;
+            }
+        }
+
+        i{
+            font-size: xxx-large;
+        }
     }
 
 }
