--- a/scss/_weaponSets.scss
+++ b/scss/_weaponSets.scss
@@ -12,6 +12,7 @@
         flex-direction: row;
         justify-content: center;
         margin-right: 0.75rem;
+        position: relative;
     
         pointer-events: all;
     }
