--- a/templates/partials/Tooltip.hbs
+++ b/templates/partials/Tooltip.hbs
@@ -1,9 +1,9 @@
 <div class="ech-tooltip">
   <div class="ech-tooltip-header">
-    <h2>{{title}} {{#if titlehtml}}<span>{{{titlehtml}}}</span>{{/if}}</h2>
+    <h2>{{{title}}}</h2>
   </div>
   <div class="ech-tooltip-body">
-    {{#if subtitle}}<h4 class="ech-tooltip-subtitle" {{#if subtitlecolor}} style="background-color:{{subtitlecolor}}" {{/if}}>{{subtitle}}</h4>{{/if}}
+    {{#if subtitle}}<h4 class="ech-tooltip-subtitle" {{#if subtitlecolor}} style="background-color:{{subtitlecolor}}" {{/if}}>{{{subtitle}}}</h4>{{/if}}
     <div class="ech-tooltip-description">{{{description}}}</div>
     <div class="ech-tooltip-details">
       {{#each details}}
@@ -27,6 +27,6 @@
       {{/each}}
     </div>
     {{/if}}
-    {{#if footerText}}<i style="font-size: 0.8rem;">{{footerText}}</i>{{/if}}
+    {{#if footerText}}<i style="font-size: 0.8rem;">{{{footerText}}}</i>{{/if}}
   </div>
 </div>
