--- a/scss/_portrait.scss
+++ b/scss/_portrait.scss
@@ -118,7 +118,9 @@
         bottom: 0px;
         flex-direction: column-reverse;
         padding-bottom: 3.5rem;
-        background: linear-gradient(0deg, rgba(65, 75, 85, 0.9) 0%, rgba(70, 80, 90, 0.8) 75%, rgba(75, 85, 95, 0) 100%);
+        -webkit-mask-image: linear-gradient(0deg, black 0%, #000000b5 75%, transparent 100%);
+        mask-image: linear-gradient(180deg, black 0%, #000000b5 75%, transparent 100%);
+        background: var(--ech-mainAction-base-background)
     }
 
     .portrait-stat-block.player-details .player-detail {
