--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -25,7 +25,8 @@
         box-shadow: none;
     }
 
-    .action-element, .button-hud-button {
+    .action-element,
+    .button-hud-button {
         background: var(--ech-mainAction-base-background) center no-repeat;
         background-origin: content-box;
         background-size: contain;
@@ -192,7 +193,9 @@
         .portrait-stat-block.player-details {
             /* ADD THEME OPTIONS */
             background-color: rgba(0 0 0 / 0.1);
-            background: linear-gradient(180deg, rgba(65, 75, 85, 0.9) 0%, rgba(70, 80, 90, 0.8) 50%, rgba(75, 85, 95, 0) 100%);
+            -webkit-mask-image: linear-gradient(180deg, black 0%, #000000b5 75%, transparent 100%);
+            mask-image: linear-gradient(180deg, black 0%, #000000b5 75%, transparent 100%);
+            background: var(--ech-mainAction-base-background)
         }
 
         /* ========== Portrait.css - Player Buttons ========== */
