--- a/scss/_actionHud.scss
+++ b/scss/_actionHud.scss
@@ -62,6 +62,10 @@
         padding: 1rem 1rem 3rem;
         position: relative;
         transition: all 0.3s ease-in-out;
+
+        &.hidden {
+            display: none;
+        }
     }
     
     .action-element.item-button {
