--- a/templates/partials/PortraitPanel.hbs
+++ b/templates/partials/PortraitPanel.hbs
@@ -20,6 +20,8 @@
 				<span class="player-detail">
 					{{description}}
 				</span>
+				<div class="effects-container">
+				</div>
 		</div>
 		<div class="player-buttons">
 
