--- a/scss/_drawer.scss
+++ b/scss/_drawer.scss
@@ -154,6 +154,7 @@
         right: 15px;
         transform: translateY(50%);
         transition: all 0.3s ease-in-out;
+        font-family: 'Font Awesome 6 Pro';
     }
 
     ul.ability-toggle li.active:after {
