--- a/scss/_tooltip.scss
+++ b/scss/_tooltip.scss
@@ -51,6 +51,7 @@
     }
     .ech-tooltip-header h2 {
         border-width: 0px;
+        color: var(--ech-tooltip-header-color);
     }
     .ech-tooltip-subtitle {
         border-radius: 3px;
