--- a/scss/_themeOptions.scss
+++ b/scss/_themeOptions.scss
@@ -51,6 +51,7 @@
         right: 15px;
         transform: rotate(0deg);
         transition: all 0.3s ease-in-out;
+        font-family: 'FontAwesome';
     }
 
     .window-content ul > li.show h4:after {
