--- a/scss/_tooltip.scss
+++ b/scss/_tooltip.scss
@@ -14,6 +14,8 @@
     transform-origin: bottom center;
     left: 50%;
     top: 50%;
+    max-height: 50vh;
+    overflow-y: auto;
 
     /*transform: translate(calc(-50% + 75px), calc(-100% - 10px));*/
 
@@ -21,11 +23,11 @@
 
     pointer-events: all;
 
-    &.ech-locked{
+    &.ech-locked {
         outline: 2px solid var(--ech-tooltip-header-background);
     }
 
-    .content-link{
+    .content-link {
         background-color: transparent;
         border: none;
         text-decoration: underline;
@@ -34,7 +36,7 @@
     &.ability-tooltip {
         transform-origin: left center;
     }
-    
+
     &.ech-show-tooltip {
         opacity: 1;
     }
@@ -66,7 +68,7 @@
     &.hide-subtitle .ech-tooltip-subtitle {
         display: none;
     }
-    
+
     .ech-tooltip-body {
         backdrop-filter: var(--ech-blur-amount);
         border-bottom-left-radius: 3px;
@@ -147,10 +149,9 @@
         vertical-align: baseline;
         white-space: nowrap;
     }
-    
-    .ech-tooltip:hover + .extended-combat-hud{
+
+    .ech-tooltip:hover + .extended-combat-hud {
         opacity: 1;
         transition-delay: 0s;
     }
-
 }
