--- a/scss/_tooltip.scss
+++ b/scss/_tooltip.scss
@@ -64,6 +64,7 @@
         top: 0px;
         transform: translate(-50%, -17.5px);
         z-index: 10000;
+        text-wrap: nowrap;
     }
     &.hide-subtitle .ech-tooltip-subtitle {
         display: none;
