--- a/scss/_combatHud.scss
+++ b/scss/_combatHud.scss
@@ -26,7 +26,7 @@
         font-variant: normal;
         text-rendering: auto;
         line-height: 1;
-        font-family: "Font Awesome 5 Free";
+        font-family: var(--font-awesome);
         font-weight: 900;
         background-color: rgb(255 28 12 / 60%);
         content: "\f1f8";
