--- a/scss/_drawer.scss
+++ b/scss/_drawer.scss
@@ -61,7 +61,7 @@
         -moz-osx-font-smoothing: grayscale;
         -webkit-font-smoothing: antialiased;
         display: inline-block;
-        font-family: "Font Awesome 5 Free";
+        font-family: var(--font-awesome);
         font-style: normal;
         text-rendering: auto;
         font-variant: normal;
@@ -147,7 +147,7 @@
         font-style: normal;
         font-variant: normal;
         text-rendering: auto;
-        font-family: "Font Awesome 5 Free";
+        font-family: var(--font-awesome);
         line-height: 1;
         font-weight: 900;
         position: absolute;
