--- a/scss/_themeOptions.scss
+++ b/scss/_themeOptions.scss
@@ -44,7 +44,7 @@
         font-style: normal;
         font-variant: normal;
         text-rendering: auto;
-        font-family: "Font Awesome 5 Free";
+        font-family: var(--font-awesome);
         line-height: 1;
         font-weight: 900;
         position: absolute;
